add build instructions