@@ -3,7 +3,11 @@
 - JavaFX (javafx-controls, javafx-fxml, javafx-media)
 
 ## Building
-TODO
+Build with `mvn clean compile package`
+
+The project requires JavaFX runtime SDK. One can be downloaded at https://gluonhq.com/products/javafx/.
+The website will download a ZIP. Unzip it, you should see a folder named "javafx-sdk-21.0.10" and a "lib" folder inside of that. Store the SDK somewhere safe. Execute the JAR file with the following command:
+`java --module-path path/to/javafx-sdk-21.0.10/lib --add-modules=javafx.controls,javafx.fxml,javafx.media -jar MazeSimulation-1.0-SNAPSHOT.jar`
 
 ## Preview
 TODO
